Fixed input boxed being too narrow in some browsers #4

--- a/src/static/styles/index.css
+++ b/src/static/styles/index.css
@@ -249,6 +249,8 @@ input[type=password]:focus {
 .login-form {
     position:relative;
     padding-top:30px;
+    min-width: 80%;
+    
     display: flex;
     flex-direction: column;
     gap:35px;
